for TransportStageDTO map transport mode to Bus if the route is flagged as a replacement bus service